--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,14 +14,18 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1"
+    "@typescript-eslint/parser": "^8.39.1",
+    "prisma": "^6.14.0"
   }
 }
